# app/Application/Usecases/User/Query/GetStaffMembers/GetStaffMembersHandler.php
@@ -1,0 +1,17 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Application\Usecases\User\Query\GetStaffMembers;
+
+use Ecotone\Modelling\Attribute\QueryHandler;
+
+final readonly class GetStaffMembersHandler
+{
+    #[QueryHandler]
+    public function handle(GetStaffMembersQuery $query): GetStaffMembersResponse
+    {
+        // WIP
+        return new GetStaffMembersResponse();
+    }
+}
