# routes/api.php
@@ -7,8 +7,14 @@ use Illuminate\Support\Facades\Route;
 
 Route::middleware('auth')->group(function () {
     Route::prefix('/user')->name('user.')->group(function () {
-        Route::post('/auth_ticket', AuthTicketController::class)->name('auth_ticket');
+        Route::post('/auth_ticket', AuthTicketController::class)
+            ->middleware(['throttle:auth.ticket'])
+            ->name('auth_ticket');
     });
+});
+
+Route::prefix('/community')->name('community.')->group(function () {
+    Route::get('/staff', \App\Presentation\Http\Controllers\Community\StaffController::class);
 });
 
 Route::prefix('/user')->name('user.')->group(function () {
